# sasin

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  build.sh
.cargo/: config.toml
docs/planning/: 00-current-state.md  01-architecture.md  02-storage-format.md  03-roadmap.md  04-parity-checklist.md  STATUS.md
src/: main.rs  setup_logger.rs
src/gui/: app.rs  messages.rs  mod.rs  runner_state.rs  state.rs  theme.rs
src/gui/app/: boot.rs  commands.rs  edit.rs  edit_body.rs  keys.rs  mod.rs  nav.rs  prefs.rs  runner.rs  subscriptions.rs  tree_ops.rs  update.rs  view.rs  ws.rs
src/gui/components/: collection_view.rs  cookie_manager.rs  editor.rs  env_panel.rs  history_list.rs  history_panel.rs  kv_table.rs  mod.rs  request_editor.rs  response_view.rs  runner_panel.rs  search_list.rs  section.rs  tab_strip.rs  tabs.rs  template_list.rs  tree.rs  ws_console.rs
src/gui/components/editor/: mod.rs  panels.rs
src/gui/components/response_view/: format.rs  mod.rs  view.rs
src/gui/components/split/: geometry.rs  mod.rs  style.rs  widget.rs
src/gui/messages/: choices.rs  mod.rs
src/gui/state/: dataset_sync.rs  mod.rs
src/gui/theme/: fonts.rs  icons.rs  metrics.rs  mod.rs  palette.rs  styles.rs
src/http/: auth.rs  body.rs  capture.rs  client.rs  cookies.rs  exec.rs  mod.rs  tests.rs
src/interop/: curl_export.rs  curl_import.rs  mod.rs  snippets.rs  tests.rs
src/interop/postman/: import.rs  mod.rs  schema.rs
src/model/: auth.rs  body.rs  defaults.rs  environment.rs  kv.rs  mod.rs  request.rs  scripts.rs  settings.rs  tree.rs  websocket.rs  workspace.rs
src/models/: mod.rs  request.rs  response.rs
src/persist/: config.rs  dataset.rs  mod.rs  paths.rs
src/runner/: data.rs  mod.rs  plan.rs  report.rs  tests.rs
src/runtime/: mod.rs  vars.rs
src/scripting/: engine.rs  mod.rs
src/storage/: cache.rs  error.rs  io_util.rs  layout.rs  load.rs  migrate.rs  mod.rs  save.rs
src/storage/tests/: cases.rs  fixtures.rs  mod.rs
src/watch/: mod.rs
src/ws/: mod.rs
