cargo-features = ["panic-immediate-abort"]

[package]
name = "sasin"
version = "0.1.0"
edition = "2024"

[profile.release]
opt-level = 3
codegen-units = 1
debug = false
incremental = false
strip = true
lto = true
panic = "immediate-abort"

[dependencies]
# async runtime
tokio = { version = "1.48.0", default-features = false, features = [
    "macros",
    "rt-multi-thread",
    "fs",
    "time",
] }

# loggers
tracing = { version = "0.1.44", features = ["std"] }
tracing-subscriber = { version = "0.3.22", features = ["fmt", "json"] }
tracing-appender = "0.2.4"

# types
chrono = { version = "0.4.42", features = ["serde"] }

# memory allocator
mimalloc = { version = "0.1.48", features = ["v3"] }
reqwest = "0.12.28"
iced = { version = "0.14.0", features = ["tokio", "advanced"] }

# serde derive for the git-native workspace model
serde = { version = "1.0.228", features = ["derive"] }

# human-readable TOML workspace files (source of truth)
toml = "0.9.8"

# JSON pretty-printing for response bodies
serde_json = { version = "1.0.146", features = ["preserve_order"] }

# dataset persistence (compact + fast cache)
bitcode = "0.6.7"
zstd = "0.13.2"

# native file dialogs for dataset open/save
rfd = "0.15.2"

[build-dependencies]
chrono = { version = "0.4.42" }
dotenvy = "0.15.7"
serde_json = { version = "1.0.146", features = ["preserve_order"] }
