[package]
name = "sasin"
version = "0.1.0"
edition = "2024"

[profile.release]
opt-level = 3
codegen-units = 1
debug = false
incremental = false
strip = true
lto = true
panic = "abort"

[dependencies]
# async runtime
tokio = { version = "1.48.0", default-features = false, features = [
    "macros",
    "rt-multi-thread",
    "fs",
    "time",
] }

# loggers
tracing = { version = "0.1.44", features = ["std"] }
tracing-subscriber = { version = "0.3.22", features = ["fmt", "json"] }
tracing-appender = "0.2.4"

# types
chrono = { version = "0.4.42", features = ["serde"] }

# memory allocator
mimalloc = { version = "0.1.48", features = ["v3"] }
reqwest = { version = "0.12.28", features = [
    "json",
    "multipart",
    "cookies",
    "gzip",
    "brotli",
    "deflate",
] }
iced = { version = "0.14.0", features = ["tokio", "advanced"] }

# serde derive for the git-native workspace model
serde = { version = "1.0.228", features = ["derive"] }

# human-readable TOML workspace files (source of truth)
toml = "0.9.8"

# JSON pretty-printing for response bodies
serde_json = { version = "1.0.146", features = ["preserve_order"] }

# dataset persistence (compact + fast cache)
bitcode = "0.6.7"
zstd = "0.13.2"

# native file dialogs for dataset open/save
rfd = "0.15.2"

# embedded JS engine for pm.* scripting (feature-gated; needs a C toolchain to build)
rquickjs = { version = "0.9", optional = true }

# WebSocket client (raw ws/wss) with rustls + bundled roots
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-webpki-roots"] }

# data-driven collection runner: CSV data files (JSON handled via serde_json)
csv = "1.3"

# shared, enumerable cookie jar (same version reqwest 0.12 uses internally)
cookie_store = "0.22"

[features]
# Scripting is on by default (the build already needs a C toolchain for zstd/quickjs).
# Disable with `--no-default-features` to drop the rquickjs dependency.
default = ["scripting"]
scripting = ["dep:rquickjs"]

[build-dependencies]
chrono = { version = "0.4.42" }
dotenvy = "0.15.7"
serde_json = { version = "1.0.146", features = ["preserve_order"] }
