[package]
name = "sasin"
version = "0.1.0"
edition = "2024"

[profile.release]
opt-level = 3
codegen-units = 1
debug = false
incremental = false
strip = true
lto = true
panic = "abort"

[dependencies]
# async runtime
tokio = { version = "1.52.3", default-features = false, features = [
    "macros",
    "rt-multi-thread",
    "fs",
    "time",
] }

# loggers
tracing = { version = "0.1.44", features = ["std"] }
tracing-subscriber = { version = "0.3.23", features = ["fmt", "json"] }
tracing-appender = "0.2.5"

# types
chrono = { version = "0.4.45", features = ["serde"] }

# memory allocator
mimalloc = { version = "0.1.52" }
reqwest = { version = "0.13.4", features = [
    "json",
    "form",
    "query",
    "multipart",
    "cookies",
    "gzip",
    "brotli",
    "deflate",
] }
iced = { version = "0.14.0", features = ["tokio", "advanced", "highlighter"] }

# serde derive for the git-native workspace model
serde = { version = "1.0.228", features = ["derive"] }

# human-readable TOML workspace files (source of truth)
toml = "1.1.2"

# JSON pretty-printing for response bodies
serde_json = { version = "1.0.150", features = ["preserve_order"] }

# dataset persistence (compact + fast cache)
bitcode = "0.6.9"
zstd = "0.13.3"

# native file dialogs (save response body, Postman collection import)
rfd = "0.17.2"

# embedded JS engine for pm.* scripting (feature-gated; needs a C toolchain to build)
rquickjs = { version = "0.12", optional = true }

# WebSocket client (raw ws/wss) with rustls + bundled roots
tokio-tungstenite = { version = "0.30", features = ["rustls-tls-webpki-roots"] }

# data-driven collection runner: CSV data files (JSON handled via serde_json)
csv = "1.4"

# shared, enumerable cookie jar (same version reqwest 0.13 uses internally)
cookie_store = "0.22"

# filesystem watch to reload the workspace on external changes (git pull / branch switch)
notify = "8"

[features]
# Scripting is on by default (the build already needs a C toolchain for zstd/quickjs).
# Disable with `--no-default-features` to drop the rquickjs dependency.
default = ["scripting"]
scripting = ["dep:rquickjs"]

[build-dependencies]
chrono = { version = "0.4.45" }
dotenvy = "0.15.7"
serde_json = { version = "1.0.150", features = ["preserve_order"] }
